# MGL849

./: .gitignore  Doxyfile  README.md  bitbucket-pipelines.yml
ref_files/: CMakeLists.txt  input_interface.cpp  input_interface.hpp  main.cpp  socket_client.cpp  socket_server.cpp  socket_server.hpp  video_capture.cpp  video_capture.h
src/: BME280.c  DesiredTemp.c  Interface.c  SensorData.c  SocketImplementation.c
